--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.jpa.show-sql=true
 
 # Enable H2 Web Console
 spring.h2.console.enabled=true
+
+# Redis configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=2000
+
+spring.cache.type=redis
+spring.cache.redis.time-to-live=60000
